--- a/configurations/php-fpm.conf
+++ b/configurations/php-fpm.conf
@@ -23,7 +23,7 @@ pid = /run/php-fpm/php-fpm.pid
 ; into a local file.
 ; Note: the default prefix is /var
 ; Default Value: log/php-fpm.log
-;error_log = /var/log/php/php-fpm.log
+error_log = /var/log/php/php-fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
